# antevorta-capstone

./: .gitignore  AGENTS.md  AGENT_HANDOFF.md  CLAUDE.md  CODEOWNERS  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  scheduled.yml
configs/: crowd_hollywood_26agent.yaml  crowd_hollywood_5agent.yaml  crowd_smoke.yaml  dummy_smoke.yaml
data/: README.md
docs/: WAVE_GUIDE.md  WoC-Bots_Implementation_Spec.md
docs/agent_prompts/: AGENT_KICKOFF.md  newAgentKickoffPrompt.txt
results/manifests/: dummy_smoke_20260716T233145Z_6f92a32f.json  dummy_smoke_20260718T192229Z_a4fb658a.json
src/wocbots/: protocols.py  types.py
src/wocbots/agents/: __init__.py  agent.py  classifier.py  crowd.py  training.py
src/wocbots/arena/: __init__.py
tests/unit/: test_config.py  test_harness.py  test_manifest.py  test_provenance.py  test_registry.py  test_rng_discipline.py  test_scaffold.py  test_w0_02_seams.py  test_w2_01_agent_state.py  test_w2_02_classifier.py  test_w2_03_crowd.py  test_w4_01_lifecycle.py  test_w4_03_aggregators.py
tickets/: 00_INDEX.md  01_MANDATORY_PREAMBLE.md  02_CODEX_CONTROL_PLANE_REVIEW_2026-07-07.md  W0-01_repo-scaffold-ci.md  W0-01_repo-scaffold-ci_PLAN.md  W0-01_scaffold-experiment-harness_PLAN.md  W0-02_types-policy-seams.md  W0-02_types-policy-seams_PLAN.md  W0-03_config-manifest-models.md  W0-04_harness-runner-rng-guard.md  W0-WAVE_scaffold-experiment-harness_PLAN.md  W1-01_raw-data-acquisition.md  W1-02_ground-truth-build-extract.md  W1-03_hollywood-etl-transforms.md  W1-04_labels-validation-gate.md  W1-05_splits-normalization.md  W1-06_anchor-analysis.md  W2-01_agent-state-profile.md  W2-02_classifier-train-eval-prune.md  W2-03_feature-assignment-crowd.md  W2-04_agent-table-reproduction.md  W3-01_grid-geometry-init.md  W3-02_movement-rounds.md  W3-03_certainty-update-flip.md  W3-04_history-trust.md  W4-01_participant-selection-loop.md  W4-02_ground-truth-feedback.md  W4-03_voting-aggregators.md  W4-04_tiers-mechanism-comparison.md  W5-01_baseline-mlp.md  W5-02_matched-comparison.md  W5-03_robustness-contrasts.md  W5-04_crowd-scaling.md  W5-05_q1-report-exit.md  W6-01_swarm-round-primitive.md  W6-02_confidence-ladder.md  W6-03_swarm-variance-study.md  W7-01_airline-etl.md  W7-02_airline-anchors-scale.md  W7-03_baseline-models.md  (+9 more)
(+15 files in other folders)
