# W0-01 §7-S2 — packaging + tool configuration (the ratified check suite's config half).
# O-ruling sites are commented per the wave plan §3 encoding rule.

[project]
name = "wocbots"
version = "0.1.0"
description = "A modular Python toolkit for swarm-based classification (WoC-Bots)"
requires-python = ">=3.11"                    # O2 ruling (team, STEP-0): 3.11 floor, CI matrix 3.11/3.12
license = { file = "LICENSE" }                # O6 ruling (stakeholder, 2026-07-07): MIT
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "pydantic>=2.6",                            # O3 ruling (team, STEP-0): pydantic v2, extra="forbid"
  "pyyaml>=6.0",
]

[dependency-groups]                            # O7 ruling (team, STEP-0): uv + committed uv.lock
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.8",
  "ruff==0.15.22",                             # EXACT pin per wave plan §12-R5 (format drift); STEP-0 capture 2026-07-16
  "types-pyyaml>=6.0",                         # mypy strict needs yaml stubs (mechanical completion, see D2)
]

# D1 (mechanical completion, flagged in the PR): the plan's §7-S2 block omits a build
# backend, but its §10.4 import pin requires the package installable from the src layout.
# hatchling: zero-config src-layout support, uv's default backend.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wocbots"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]     # errors, pyflakes, isort, pyupgrade, bugbear, simplify

[tool.mypy]                                    # O4 ruling (team, STEP-0): strict, no relaxations at scaffold
strict = true
# per-module relaxations: NONE at scaffold time; any later exception is named + commented (wave plan §3-O4)

[tool.pytest.ini_options]
markers = ["slow: multi-minute integration runs"]
addopts = "--strict-markers"                   # unknown marks are ERRORS, not silent no-ops
# NO default -m filter: plain `pytest` = the full closeable gate (wave plan §7-S1 ruling)

[tool.coverage.run]                            # O9 ruling (team, STEP-0): report-only, no threshold gate
source = ["src/wocbots"]
